k8s/alpha/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: sirepo-alpha
  labels:
    app: sirepo-alpha
