k8s/alpha/api-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
  namespace: sirepo-alpha
  labels:
    app: sirepo-alpha
    deployment: sirepo-alpha-api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: sirepo-alpha-api-server
  template:
    metadata:
      labels:
        app: sirepo-alpha
        deployment: sirepo-alpha-api-server
    spec:
      containers:
        - name: api-server
          image: radiasoft/sirepo:20240903.204953
          command: ["/bin/bash", "/srv/sirepo/cmd"]
          ports:
            # TODO(e-carlin): Unused in name so commenting out. Would be nice to use name in svc/api-server
            # and in ingress/sirepo.
            # - name: sirepo-port
            #   containerPort: 8000
          # TODO(e-carlin): Tune these resource limits.
          resources:
            requests:
              memory: "16Gi"
              cpu: "1"
            limits:
              memory: "16Gi"
              cpu: "1"
          volumeMounts:
            - mountPath: /srv
              name: storage
              subPath: sw/lume/radiasoft/sirepo-alpha/srv
      securityContext:
        runAsUser: 46588 # TODO(e-carlin): This is my id. Need service user.
        runAsGroup: 1126 # TODO(e-carlin): This is just the only group I'm in. Get a group?
        fsGroup: 1126
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: pvc
