k8s/alpha/job-supervisor-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-supervisor
  namespace: sirepo-alpha
  labels:
    app: sirepo-alpha
    deployment: sirepo-alpha-job-supervisor
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: sirepo-alpha-job-supervisor
  template:
    metadata:
      labels:
        app: sirepo-alpha
        deployment: sirepo-alpha-job-supervisor
    spec:
      containers:
        - name: job-supervisor
          image: radiasoft/sirepo:alpha
          command: ["/bin/bash", "/srv/sirepo_job_supervisor/cmd"]
          resources:
            requests:
              memory: "16Gi"
              cpu: "16"
            limits:
              memory: "16Gi"
              cpu: "16"
          volumeMounts:
            - mountPath: /srv
              name: storage
      securityContext:
        runAsUser: 46588 # TODO(e-carlin): this is my id. Get a service user?
        runAsGroup: 1126 # TODO(e-carlin): this is just the only group I'm in. Get a group?
        fsGroup: 1126 # TODO(e-carlin): Understand this better
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: pvc
