k8s/alpha/slactwin-db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slactwin-db
  namespace: sirepo-alpha
  labels:
    app: sirepo-alpha
    deployment: sirepo-alpha-slactwin-db
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: sirepo-alpha-slactwin-db
  template:
    metadata:
      labels:
        app: sirepo-alpha
        deployment: sirepo-alpha-slactwin-db
    spec:
      containers:
        - name: slactwin-db
          image: radiasoft/sirepo:20240903.204953
          command: ["/bin/bash", "/srv/slactwin_db/cmd"]
          resources:
            requests:
              memory: "4Gi"
              cpu: "1"
            limits:
              memory: "4Gi"
              cpu: "1"
          volumeMounts:
            - mountPath: /srv
              name: storage
              subPath: sw/lume/radiasoft/sirepo-alpha/srv
      securityContext:
        runAsUser: 46588 # TODO(e-carlin): Need service user.
        runAsGroup: 1126 # TODO(e-carlin): Need service group.
        fsGroup: 1126 # TODO(e-carlin): Understand this better
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: pvc
