k8s/alpha/api-server-service.yml
kind: Service
apiVersion: v1
metadata:
  name: api-server
  namespace: sirepo-alpha
  labels:
    app: sirepo-alpha
spec:
  type: ClusterIP
  ports:
    - port: 8000
      protocol: TCP
  selector:
    deployment: sirepo-alpha-api-server
