k8s/alpha/job-supervisor-service.yml
kind: Service
apiVersion: v1
metadata:
  name: job-supervisor
  namespace: sirepo-alpha
  labels:
    app: sirepo-alpha
spec:
  type: ClusterIP
  ports:
    - port: 8100
      protocol: TCP
  selector:
    deployment: sirepo-alpha-job-supervisor
